--- a/app/src/main/res/layout/activity_sheet3.xml
+++ b/app/src/main/res/layout/activity_sheet3.xml
@@ -77,7 +77,7 @@
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/style_etbg"
                 android:gravity="center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:textSize="8sp" />
 
             <TextView
@@ -103,7 +103,7 @@
                 android:background="@drawable/style_etbg"
                 android:gravity="center"
                 android:hint="Psi"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:textSize="8sp" />
 
             <TextView
@@ -129,7 +129,7 @@
                 android:background="@drawable/style_etbg"
                 android:gravity="center"
                 android:hint="@string/c"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:textSize="8sp" />
 
             <TextView
@@ -155,7 +155,7 @@
                 android:background="@drawable/style_etbg"
                 android:gravity="center"
                 android:hint="@string/vdc"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:textSize="8sp" />
 
 
@@ -182,7 +182,7 @@
                 android:background="@drawable/style_etbg"
                 android:gravity="center"
                 android:hint="@string/c"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:textSize="8sp" />
 
             <TextView
@@ -208,7 +208,7 @@
                 android:background="@drawable/style_etbg"
                 android:gravity="center"
                 android:hint="@string/c"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:textSize="8sp" />
 
             <TextView
@@ -227,7 +227,7 @@
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/style_etbg"
                 android:gravity="center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:textSize="8sp" />
 
             <Spinner
@@ -612,9 +612,8 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/style_etbg"
-                android:digits="123456789"
                 android:gravity="center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:textSize="8sp" />
 
             <TextView
@@ -658,9 +657,8 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/style_etbg"
-                android:digits="123456789"
                 android:gravity="center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:textSize="8sp" />
 
 
@@ -720,10 +718,9 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/style_etbg"
-                android:digits="123456789"
                 android:gravity="center"
                 android:hint="@string/kw_kva"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:textSize="8sp" />
 
             <ImageView
@@ -763,59 +760,13 @@
                 android:layout_marginEnd="10dp"
                 android:padding="10dp" />
 
-            <ImageView
-                android:id="@+id/Camera3"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_below="@+id/EditRecomendaciones"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="30dp"
-                tools:src="@android:drawable/ic_menu_camera" />
 
-            <ImageButton
-                android:id="@+id/ButtonCamera3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/EditRecomendaciones"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="60dp"
-                android:layout_marginBottom="20dp"
-                android:layout_toEndOf="@+id/Camera3"
-                android:shadowColor="@color/black"
-                android:src="@drawable/ic_baseline_camera"
-                android:text="@string/camara" />
-
-            <ImageButton
-                android:id="@+id/ButtonCameraSearch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/EditRecomendaciones"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="60dp"
-                android:layout_marginBottom="20dp"
-                android:layout_toEndOf="@+id/ButtonCamera3"
-                android:shadowColor="@color/black"
-                android:src="@drawable/ic_baseline_image_search"
-                android:text="@string/camara" />
-
-            <ImageButton
-                android:id="@+id/ButtonCamera3Upload"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/EditRecomendaciones"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="60dp"
-                android:layout_marginBottom="20dp"
-                android:layout_toEndOf="@+id/ButtonCameraSearch"
-                android:shadowColor="@color/black"
-                android:src="@drawable/ic_baseline_cloud_upload"
-                android:text="@string/camara" />
 
             <Button
                 android:id="@+id/buttonEnviar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/Camera3"
+                android:layout_below="@+id/EditRecomendaciones"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="30sp"
                 android:layout_marginBottom="20sp"
