--- a/app/src/main/res/layout/activity_sheet7.xml
+++ b/app/src/main/res/layout/activity_sheet7.xml
@@ -238,12 +238,12 @@
             android:layout_height="23dp"
             android:layout_below="@+id/textH"
             android:layout_marginStart="20dp"
-            android:textSize="8sp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:layout_toEndOf="@+id/fechaUltimoTanqueo"
             android:background="@drawable/style_etbg"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textSize="8sp" />
 
 
         <TextView
@@ -260,10 +260,11 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
-            android:textSize="8sp"
             android:layout_toEndOf="@+id/TextPDuplicado"
             android:background="@drawable/style_etbg"
-            android:gravity="center" />
+            android:gravity="center"
+            android:inputType="numberDecimal"
+            android:textSize="8sp" />
 
         <ImageView
             android:id="@+id/imageViewSeparatorEpp"
@@ -798,59 +799,13 @@
             android:gravity="center"
             android:textSize="8sp" />
 
-        <ImageView
-            android:id="@+id/Camera2"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_below="@+id/EditOtrosServicios"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="30dp"
-            tools:src="@android:drawable/ic_menu_camera" />
 
-        <ImageButton
-            android:id="@+id/ButtonCamera7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/EditOtrosServicios"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="60dp"
-            android:layout_marginBottom="20dp"
-            android:layout_toEndOf="@+id/Camera2"
-            android:shadowColor="@color/black"
-            android:src="@drawable/ic_baseline_camera"
-            android:text="@string/camara" />
-
-        <ImageButton
-            android:id="@+id/ButtonCameraSearch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/EditOtrosServicios"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="60dp"
-            android:layout_marginBottom="20dp"
-            android:layout_toEndOf="@+id/ButtonCamera7"
-            android:shadowColor="@color/black"
-            android:src="@drawable/ic_baseline_image_search"
-            android:text="@string/camara" />
-
-        <ImageButton
-            android:id="@+id/ButtonCamera7Upload"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/EditOtrosServicios"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="60dp"
-            android:layout_marginBottom="20dp"
-            android:layout_toEndOf="@+id/ButtonCameraSearch"
-            android:shadowColor="@color/black"
-            android:src="@drawable/ic_baseline_cloud_upload"
-            android:text="@string/camara" />
 
         <Button
             android:id="@+id/buttonEnviar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/Camera2"
+            android:layout_below="@+id/text2B"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30sp"
             android:layout_marginBottom="20sp"
